Fix scan-split pager overflow

--- a/scanblog/static/css/moderation/_scans.sass
+++ b/scanblog/static/css/moderation/_scans.sass
@@ -93,7 +93,7 @@
     position: fixed
     bottom: 0px
     right: 0px
-    width: 550px
+    width: 600px
     max-height: 80%
     overflow: auto
 
